change stream manager update